objects/Article_Feedback_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Article_Feedback__c</fullName>
        <label>Feedback</label>
        <referenceTo>Article_Feedback__c</referenceTo>
        <relationshipLabel>COS Feedback Comments</relationshipLabel>
        <relationshipName>Article_Feedback_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cc__c</fullName>
        <inlineHelpText>Enter Emails to Cc this feedback comments . Emails should be separated by , or ;</inlineHelpText>
        <label>Cc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email_this_comment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email this comment</description>
        <label>Email this comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FB_Account_Name__c</fullName>
        <label>Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Submitter_Name__c</fullName>
        <label>Submitter Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Submitter_Account__c</fullName>
        <formula>Article_Feedback__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Submitter_Email__c</fullName>
        <formula>Article_Feedback__r.Submitter_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to__c</fullName>
        <inlineHelpText>Enter Emails to send this feedback comments . Emails should be separated by ,  or  ;</inlineHelpText>
        <label>Send to/Received from</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <formula>Article_Feedback__r.Submitter__r.FirstName  &amp;&quot; &quot; &amp;  Article_Feedback__r.Submitter__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who added the comment on feedback.</description>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedback_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Type__c</fullName>
        <label>Update Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>COS Feedback Comment</label>
    <nameField>
        <displayFormat>Feedback Comment -{00000}</displayFormat>
        <label>Feedback Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COS Feedback Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>